[gd_scene load_steps=4 format=2]

[ext_resource path="res://WorldRelated/WorldSlices/Stage_Special002/Level01/SpecificAssets/WSSS0201_Star_Normal.png" type="Texture" id=1]
[ext_resource path="res://MiscRelated/FontRelated/FontRes/monogram_32.tres" type="DynamicFont" id=2]
[ext_resource path="res://WorldRelated/WorldSlices/Stage_Special002/Level01/Subs/StarCounterBigPanel/StarCounterBigPanel.gd" type="Script" id=3]

[node name="StarCounterBigPanel" type="MarginContainer"]
margin_right = 40.0
margin_bottom = 17.0
mouse_filter = 2
script = ExtResource( 3 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_right = 85.0
margin_bottom = 43.0
mouse_filter = 2

[node name="StarIcon" type="TextureRect" parent="VBoxContainer"]
margin_left = 34.0
margin_right = 51.0
margin_bottom = 17.0
mouse_filter = 2
size_flags_horizontal = 6
size_flags_vertical = 6
texture = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 21.0
margin_right = 85.0
margin_bottom = 43.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 13

[node name="StarCountCurrLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_right = 24.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = ExtResource( 2 )
text = "00"

[node name="StarCountMaxLabel" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 37.0
margin_right = 85.0
margin_bottom = 22.0
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.866667, 0.866667, 0.866667, 1 )
custom_fonts/font = ExtResource( 2 )
text = "/ 00"
